--- a/catalog/build.gradle
+++ b/catalog/build.gradle
@@ -36,15 +36,20 @@ ext {
 dependencies {
     //Reactive Web + JPA
     implementation "org.springframework.boot:spring-boot-starter-webflux"
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
+    implementation "io.github.daggerok:liquibase-r2dbc-spring-boot-starter:3.1.3"
 
     // Actuator
     implementation "org.springframework.boot:spring-boot-starter-actuator"
+
+    //Validation
+    implementation "org.springframework.boot:spring-boot-starter-validation"
 
     //devtools
     developmentOnly "org.springframework.boot:spring-boot-devtools"
 
     //Database + Liquibase
+    runtimeOnly "org.postgresql:r2dbc-postgresql:1.0.7.RELEASE"
     implementation "org.postgresql:postgresql:${postgresql}"
     liquibaseRuntime sourceSets.main.output
     liquibaseRuntime "org.postgresql:postgresql:${postgresql}"
