add product update and retrieval features, enhance database changelog, and configure WebClient

--- a/catalog/build.gradle
+++ b/catalog/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "io.spring.dependency-management" version "1.1.7"
     id "io.freefair.lombok" version "8.13.1"
     id "org.liquibase.gradle" version "2.2.0"
+    id "com.gorylenko.gradle-git-properties" version "1.5.1"
 }
 
 group = 'mu.elca'
@@ -31,16 +32,19 @@ ext {
     set('postgresql', "42.7.5")
     set('liquibase', "4.31.1")
     set('liquibase_hibernate', "4.31.1")
+    set('micrometerRegistryPrometheus', "1.14.6")
+    set('liquibaseR2dbc', "3.1.3")
 }
 
 dependencies {
     //Reactive Web + JPA
     implementation "org.springframework.boot:spring-boot-starter-webflux"
     implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
-    implementation "io.github.daggerok:liquibase-r2dbc-spring-boot-starter:3.1.3"
+    implementation "io.github.daggerok:liquibase-r2dbc-spring-boot-starter:${liquibaseR2dbc}"
 
     // Actuator
     implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "io.micrometer:micrometer-registry-prometheus:${micrometerRegistryPrometheus}"
 
     //Validation
     implementation "org.springframework.boot:spring-boot-starter-validation"
@@ -69,4 +73,8 @@ apply {
 
 test {
     useJUnitPlatform()
+}
+
+springBoot {
+    buildInfo()
 }
