--- a/order/build.gradle
+++ b/order/build.gradle
@@ -1,17 +1,74 @@
 plugins {
     id 'java'
+    id "org.springframework.boot" version "3.4.5"
+    id "io.spring.dependency-management" version "1.1.7"
+    id "io.freefair.lombok" version "8.13.1"
+    id "org.liquibase.gradle" version "2.2.0"
 }
 
 group = 'mu.elca'
 version = '0.0.1-SNAPSHOT'
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
+ext {
+    set('postgresql', "42.7.5")
+    set('liquibase', "4.31.1")
+    set('liquibase_hibernate', "4.31.1")
+    set('micrometerRegistryPrometheus', "1.14.6")
+    set('liquibaseR2dbc', "3.1.3")
+    set('openAPIWebflux', "2.8.6")
+}
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    //Reactive Web + JPA
+    implementation "org.springframework.boot:spring-boot-starter-webflux"
+    implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
+    implementation "io.github.daggerok:liquibase-r2dbc-spring-boot-starter:${liquibaseR2dbc}"
+
+    // Actuator
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "io.micrometer:micrometer-registry-prometheus:${micrometerRegistryPrometheus}"
+
+    //Validation
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+
+    //devtools
+    developmentOnly "org.springframework.boot:spring-boot-devtools"
+
+    //Database + Liquibase
+    runtimeOnly "org.postgresql:r2dbc-postgresql:1.0.7.RELEASE"
+    implementation "org.postgresql:postgresql:${postgresql}"
+    liquibaseRuntime sourceSets.main.output
+    liquibaseRuntime "org.postgresql:postgresql:${postgresql}"
+    liquibaseRuntime "org.liquibase:liquibase-core:${liquibase}"
+    liquibaseRuntime "org.liquibase.ext:liquibase-hibernate6:${liquibase_hibernate}"
+
+    //circuit breaker
+    implementation "io.github.resilience4j:resilience4j-spring-boot3:2.3.0"
+    //messenger broker
+    implementation "org.springframework.boot:spring-boot-starter-amqp"
+
+}
+
+apply {
+    plugin "org.liquibase.gradle"
 }
 
 test {
