--- a/order/build.gradle
+++ b/order/build.gradle
@@ -34,6 +34,8 @@ ext {
     set('micrometerRegistryPrometheus', "1.14.6")
     set('liquibaseR2dbc', "3.1.3")
     set('openAPIWebflux', "2.8.6")
+    set('resilience4j', "2.3.0")
+    set('r2dbcPostgresql', "1.0.7.RELEASE")
 }
 
 dependencies {
@@ -53,15 +55,16 @@ dependencies {
     developmentOnly "org.springframework.boot:spring-boot-devtools"
 
     //Database + Liquibase
-    runtimeOnly "org.postgresql:r2dbc-postgresql:1.0.7.RELEASE"
+    runtimeOnly "org.postgresql:r2dbc-postgresql:${r2dbcPostgresql}"
     implementation "org.postgresql:postgresql:${postgresql}"
     liquibaseRuntime sourceSets.main.output
     liquibaseRuntime "org.postgresql:postgresql:${postgresql}"
     liquibaseRuntime "org.liquibase:liquibase-core:${liquibase}"
     liquibaseRuntime "org.liquibase.ext:liquibase-hibernate6:${liquibase_hibernate}"
 
-    //circuit breaker
-    implementation "io.github.resilience4j:resilience4j-spring-boot3:2.3.0"
+    //resilience4j
+    implementation "io.github.resilience4j:resilience4j-spring-boot3:${resilience4j}"
+    implementation "org.springframework.boot:spring-boot-starter-aop"
     //messenger broker
     implementation "org.springframework.boot:spring-boot-starter-amqp"
 
