add async configuration, update OpenAPI settings, and enhance application YAML for Swagger UI

--- a/catalog/src/main/resources/application.yaml
+++ b/catalog/src/main/resources/application.yaml
@@ -13,8 +13,11 @@ management:
         include: ["prometheus", "health"]
 
 springdoc:
+  swagger-ui:
+    enabled: true
+    path: /v1/${spring.application.name}/swagger-ui.html
   api-docs:
-    path: /api-docs
+    path: /v1/catalog-service-docs
 
 spring:
   application:
