--- a/order/src/main/resources/application.yaml
+++ b/order/src/main/resources/application.yaml
@@ -12,6 +12,13 @@ management:
       exposure:
         include: ["prometheus", "health"]
 
+springdoc:
+  swagger-ui:
+    enabled: true
+    path: /v1/${spring.application.name}/swagger-ui.html
+  api-docs:
+    path: /v1/order-service-docs
+
 spring:
   application:
     name: order-service
