--- a/catalog/build.gradle
+++ b/catalog/build.gradle
@@ -34,7 +34,8 @@ ext {
     set('liquibase_hibernate', "4.31.1")
     set('micrometerRegistryPrometheus', "1.14.6")
     set('liquibaseR2dbc', "3.1.3")
-    set('openAPIWebflux', "2.8.6")
+    set('r2dbcPostgresql', "1.0.7.RELEASE")
+    set('openAPIWebflux', "2.0.4")
 }
 
 dependencies {
@@ -54,7 +55,7 @@ dependencies {
     developmentOnly "org.springframework.boot:spring-boot-devtools"
 
     //Database + Liquibase
-    runtimeOnly "org.postgresql:r2dbc-postgresql:1.0.7.RELEASE"
+    runtimeOnly "org.postgresql:r2dbc-postgresql:${r2dbcPostgresql}"
     implementation "org.postgresql:postgresql:${postgresql}"
     liquibaseRuntime sourceSets.main.output
     liquibaseRuntime "org.postgresql:postgresql:${postgresql}"
@@ -67,7 +68,7 @@ dependencies {
     testRuntimeOnly "org.junit.platform:junit-platform-launcher"
 
     //Openapi
-    implementation "org.springdoc:springdoc-openapi-starter-webflux-api:${openAPIWebflux}"
+    implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:${openAPIWebflux}"
 
 }
 
